# drf-example

./: README.md
.docker/: Dockerfile  docker-compose.yml
.github/workflows/: release.yml  release2.yml
.terraform/: apis.tf  artifact_registry.tf  cloudsql.tf  network.tf  terraform.tf  variables.tf
src/: entrypoint.sh  pyproject.toml
src/angular-app/: .gitignore  angular.json  karma.conf.js  package-lock.json  package.json
src/angular-app/src/app/: apiservice.service.ts  app-routing.module.ts  app.component.html
src/angular-app/src/app/manage-data/: manage-data.component.html  manage-data.component.ts
src/angular-app/src/app/myform/: myform.component.html  myform.component.ts
src/angular-app/src/app/view-data/: view-data.component.css  view-data.component.html  view-data.component.ts
src/drf_example/: settings.py  urls.py
src/drf_example/example/: apps.py  models.py  serializers.py  views.py
src/drf_example/example/migrations/: 0001_initial.py  0002_alter_quote_tobacco_status_and_more.py
