[tool.poetry]
name = "drf-example"
version = "0.1.0"
description = ""
authors = ["Thomas Cross <tom.bz2@gmail.com>"]
readme = "README.md"
packages = [{include = "drf_example"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.5"
django-environ = "^0.9.0"
uvicorn = "^0.20.0"
django-storages = "^1.13.1"
google-cloud-storage = "^2.6.0"
django-cors-headers = "^3.13.0"
django-filter = "^22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
